--- a/app/templates/reset_token.html
+++ b/app/templates/reset_token.html
@@ -1,14 +1,24 @@
 {% extends "layout.html" %}
+{% from "_macros.html" import render_field %}
 
 {% block content %}
-    <h1>Defina a sua Nova Senha</h1>
-    <form method="POST" action="">
-        <div style="margin-top: 1em;">
-            <label>Nova Senha</label>
-            <input type="password" name="password" required minlength="6">
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <h2 class="card-title text-center mb-4">Escolha a sua Nova Senha</h2>
+                    <form method="POST" action="" novalidate>
+                        {{ form.hidden_tag() }} {{ render_field(form.password, placeholder="Digite a nova senha") }}
+                        {{ render_field(form.confirm_password, placeholder="Confirme a nova senha") }}
+
+                        <div class="d-grid">
+                            {{ form.submit(class="btn btn-primary btn-block") }}
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
-        <div style="margin-top: 1.5em;">
-            <button type="submit">Redefinir Senha</button>
-        </div>
-    </form>
-{% endblock %}
+    </div>
+</div>
+{% endblock content %}
